<resources>
    <string name="app_name">IMAcademy</string>
    <string name="btn_signIn">Continue with Google</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="study_material">Study Material</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="batches">Batches</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">Indian Music Academy</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logo_transition">LogoTransition</string>
    <string name="attendance">Attendance</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Mobile Number</string>
    <string name="course">Course</string>
    <string name="fees">Fees Remaining</string>
    <string name="hint_name">Enter Your Name</string>
    <string name="hint_mail">Enter your Email ID</string>
    <string name="hint_phone">Enter your Mobile Number</string>
    <string name="hint_amount">Enter amount to pay</string>
    <string name="register">Register</string>
    <string name="date">Joining Date</string>
    <string name="upiId">aajmane09@oksbi</string>
</resources>