<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menuHome"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/menuStudyMaterial"
            android:icon="@drawable/ic_study"
            android:title="@string/study_material" />
        <item
            android:id="@+id/menuAttendance"
            android:icon="@drawable/ic_profile"
            android:title="@string/attendance" />
        <item
            android:id="@+id/menuSettings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>