<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_60"
            android:layout_marginEnd="@dimen/margin_10"
            android:drawableStart="@drawable/profile_black"
            android:drawablePadding="@dimen/card_radius"
            android:hint="@string/hint_name" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_10"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="@dimen/card_radius"
            android:hint="@string/hint_mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_10"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="@dimen/card_radius"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:maxLength="10" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_10"
            android:drawablePadding="@dimen/card_radius"
            android:text="@string/course"
            app:drawableStartCompat="@drawable/ic_course" />

        <TextView
            android:id="@+id/tvCourseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginEnd="@dimen/margin_10"
            android:text="Piano"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_10"
            android:drawablePadding="@dimen/card_radius"
            android:text="Total Fees"
            app:drawableStartCompat="@drawable/ic_rupees" />

        <TextView
            android:id="@+id/tvTotalFees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_30"
            android:layout_marginEnd="@dimen/margin_10"
            android:text="Rs. 2000/-"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_10"
            android:drawableStart="@drawable/ic_rupees"
            android:drawablePadding="@dimen/card_radius"
            android:hint="@string/hint_amount"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_10"
        android:background="@color/colorAccent"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <RelativeLayout
        android:id="@+id/progressBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</RelativeLayout>