<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MyProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_60"
            android:src="@drawable/profile_icon" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_10">

            <TextView
                android:id="@+id/labelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/card_radius"
                android:text="@string/name"
                app:drawableStartCompat="@drawable/profile_black" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/labelName"
                android:layout_marginStart="@dimen/margin_20"
                android:text="Shubham Aajmane"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_10">

            <TextView
                android:id="@+id/labelEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/card_radius"
                android:text="@string/email"
                app:drawableStartCompat="@drawable/ic_mail" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/labelEmail"
                android:layout_marginStart="@dimen/margin_20"
                android:text="aajmane09@gmail.com"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_10">

            <TextView
                android:id="@+id/labelPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/card_radius"
                android:text="@string/phone"
                app:drawableStartCompat="@drawable/ic_phone" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/labelPhone"
                android:layout_marginStart="@dimen/margin_20"
                android:text="9552400654"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_10">

            <TextView
                android:id="@+id/labelCourse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/card_radius"
                android:text="@string/course"
                app:drawableStartCompat="@drawable/ic_course" />

            <TextView
                android:id="@+id/tvCourse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/labelCourse"
                android:layout_marginStart="@dimen/margin_20"
                android:text="Piano"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_10">

            <TextView
                android:id="@+id/labelFees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/card_radius"
                android:text="@string/fees"
                app:drawableStartCompat="@drawable/ic_rupees" />

            <TextView
                android:id="@+id/tvFees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/labelFees"
                android:layout_marginStart="@dimen/margin_20"
                android:text="Rs. 1000/-"
                android:textColor="@android:color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_10">

            <TextView
                android:id="@+id/labelDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/card_radius"
                android:text="@string/date"
                app:drawableStartCompat="@drawable/ic_calendar" />

            <TextView
                android:id="@+id/tvStartingDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/labelDate"
                android:layout_marginStart="@dimen/margin_20"
                android:text="5 Sept 2021"
                android:textColor="@android:color/black" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_60"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_10"
        android:background="@color/colorAccent"
        android:text="Log Out"
        android:textColor="@android:color/white" />
</RelativeLayout>